UIP-2073: Fixed alignment of StatAreaCard back labels

--- a/packages/ui-library/src/css/layout/_dashboard-cards.scss
+++ b/packages/ui-library/src/css/layout/_dashboard-cards.scss
@@ -197,6 +197,7 @@ $fullwidthBreakpoint: 950px;
         font-size: 14px;
         color: $color-strong-neutral-30;
         margin-bottom: $spacing-sm;
+        text-align: left;
 
         &:last-child {
             margin-bottom: 0;
